Fixed Spring to recognize migration component.